welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:5: error: '(' expected but '{' found.
  else if {a==b==c}{rep=5}
          ^